@@ -1,3 +1,7 @@
+2013-02-09  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed character encoding in IMDB results list (Bug 314113).
+
 2013-02-02  Robby Stephenson  <robby@periapsis.org>
 
 	* Added fetcher for VNDB.org.
